# addrmatcher

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  README.md  addr_matching_unfactored.py  master_dataset_creation.py  setup.cfg
data/Australia/: NT-1.parquet  OT-1.parquet  WA-4.parquet
docs/: requirements.txt
docs/source/: README.rst  addrmatcher.hierarchies.rst  addrmatcher.rst  conf.py  index.rst  modules.rst  readme.rst
src/addrmatcher/: AU.py  __init__.py  __main__.py  analysis.py  hierarchy.py  matcher.py  region.py  resource.py
src/addrmatcher/hierarchies/: AUS.py  __init__.py
src/addrmatcher_package/: Untitled.ipynb  hierarchy.py  matcher.py  region.py
tests/: latlon_addrmatching_unfactored.py  master_dataset_creation.py  test.py
tests/notebooks/: AddrMatching_Coordinate_ACT_Address.ipynb  AddrMatching_Coordinate_MVP.ipynb  Coordinate Match.ipynb  Coordinate_Match_Modularised.ipynb  Match Address.ipynb  Match_Address_Modularised.ipynb
tests/oo/: addrmatcher.py  hierarchy.py  matcher.py  test.py
tests/python/: addr_matching_unfactored.py  latlon_addrmatching_unfactored.py  latlon_addrmatching_unfactored_2.py  master_dataset_creation.py
