[metadata]
name =  addrmatcher
version = 0.0.1.2.11
author = Irfan Sampe, Hnin Pwint Tin, YUNSEOK OH, JEDO ENRIQUEZ
author_email = addrmatcher@gmail.com
description = Austalian Address Matcher to Regions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uts-mdsi-ilab2-synergy/addrmatcher
project_urls =
    Bug Tracker = https://github.com/uts-mdsi-ilab2-synergy/addrmatcher/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
# include_package_data = True
install_requires = 
    rapidfuzz
    pyarrow

[options.packages.find]
where = src

# [options.data_files]
# data = addrmatcher/data/Australia/*.parquet

[options.package_data]
addrmatcher = data/Australia/*.parquet