[metadata]
name =  addrmatcher
version = 0.0.2.2
author = Irfan Sampe, Hnin Pwint Tin, YUNSEOK OH, JEDO ENRIQUEZ
author_email = addrmatcher@gmail.com
description = Austalian Address Matcher to Regions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uts-mdsi-ilab2-synergy/addrmatcher
project_urls =
    Bug Tracker = https://github.com/uts-mdsi-ilab2-synergy/addrmatcher/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    rapidfuzz
    scikit-learn>=0.24.2
    pyarrow>=5.0.0
    numpy>=1.16.6
    pandas
    colorama
    requests
    Pillow
    
    
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    addrmatcher_data_download = addrmatcher.resource:download
